--- a/random/index.html
+++ b/random/index.html
@@ -34,13 +34,13 @@
         // Your web app's Firebase configuration
         // For Firebase JS SDK v7.20.0 and later, measurementId is optional
         const firebaseConfig = {
-            apiKey: "AIzaSyCfE91-bKtaIhagzrEW6fSnWQTy4OscMEY",
-            authDomain: "sample-ab4e3.firebaseapp.com",
-            projectId: "sample-ab4e3",
-            storageBucket: "sample-ab4e3.appspot.com",
-            messagingSenderId: "390528603154",
-            appId: "1:390528603154:web:fde1a9c9928f72524db4cb",
-            measurementId: "G-36BBCT09YG"
+            apiKey: "AIzaSyAU4OPIFZpmPQ9j64secmuwQ6C6GlKuBro",
+            authDomain: "random-ec514.firebaseapp.com",
+            projectId: "random-ec514",
+            storageBucket: "random-ec514.appspot.com",
+            messagingSenderId: "340734875056",
+            appId: "1:340734875056:web:3b2fc99039ab8477d3f275",
+            measurementId: "G-WTFMSMW2WS"
         };
 
         // Initialize Firebase
